css/main.css
/* ... */
.radio-buttons-block [type="radio"]:checked,
.radio-buttons-block [type="radio"]:not(:checked) {
  position: absolute;
  left: -9999px;
}
.radio-buttons-block [type="radio"]:checked + label,
.radio-buttons-block [type="radio"]:not(:checked) + label {
  position: relative;
  padding-left: 38px;
  cursor: pointer;
  line-height: 20px;
  display: inline-block;
  color: #666;
}
.radio-buttons-block [type="radio"]:checked + label:before,
.radio-buttons-block [type="radio"]:not(:checked) + label:before {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  width: 18px;
  height: 18px;
  border: 1px solid #666666;
  border-radius: 100%;
  background: #fff;
}
.radio-buttons-block [type="radio"]:checked + label:after,
.radio-buttons-block [type="radio"]:not(:checked) + label:after {
  content: "";
  width: 12px;
  height: 12px;
  background: #0095da;
  position: absolute;
  top: 4px;
  left: 4px;
  border-radius: 100%;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}
.radio-buttons-block [type="radio"]:not(:checked) + label:after {
  opacity: 0;
  -webkit-transform: scale(0);
  transform: scale(0);
}
.radio-buttons-block [type="radio"]:checked + label:after {
  opacity: 1;
  -webkit-transform: scale(1);
  transform: scale(1);
}

/* .radio-buttons-block {margin-bottom: 33px; margin-top: 16px;} */
/* .radio-buttons-block {margin-bottom: 16px; margin-top: 16px;} */
.radio-block {
  margin-bottom: 20px;
}
.radio-block:nth-last-child(1) {
  margin-bottom: 0;
}

.t-and-c-line {
  font-size: 13px;
  font-weight: normal;
  line-height: normal;
  letter-spacing: normal;
  color: #666;
  margin-bottom: 22px;
}

.radio-buttons-block label,
.radio-buttons-block label > span {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.57 !important;
  letter-spacing: normal;
  color: #222 !important;
}

.radio-block.with-custom-select .form-control.custom-select {
  width: 39%;
  margin-left: 16px;
  display: none;
}

.radio-block.with-custom-select {
  display: flex;
  align-items: center;
}

.blue-button-remain {
  background-color: #0095da !important;
  color: #ffffff !important;
}

.card_name_ui {
  font-weight: 400;
}

.tick-active {
  pointer-events: all;
}

.fw-semibold {
  font-weight: 600;
}

.text-13 {
  font-size: 13px;
}

.tick-buttons-block a {
  margin: 0;
  margin-right: 10px;
  margin-top: 10px;
}

.select-reason-wrapp .card-view-holder.message-seccess-view {
  margin: 30px 0;
  margin-bottom: 20px;
}

.select-reson-cnt {
  display: none;
}

.otp-section-block {
  display: none;
}

.otp-block [type="number"] {
  padding-left: 10px;
}

.resend-text {
  display: none;
  width: 100%;
  margin-top: 10px;
  color: #0095d9;
  font-size: 13px;
}

.error-otp-text {
  width: 100%;
  margin-top: 10px;
  color: red;
  font-size: 13px;
}

.card-closure-wrapp-first-block.active .sub-heading {
  display: none ;
}

.card-closure-wrapp-first-block .sub-heading {
  display: block ;
}

.min-h-100vh {
  min-height: 100vh;
}

.select-reson-cnt .message-seccess-view p {
  color: #333;
}

.sbi-input-checkbox input {
  width: 100%;
}
/* Latest changes */
.bottom-spacer{
  margin-top: 59px;
  height: 1px;
  width: 100%;
}
.radio-buttons-block [type="radio"] + label .extra-radio-body{
  display: none;
}
.radio-buttons-block [type="radio"]:checked + label .extra-radio-body{
  display: block;
}
.card-features-and-offers p.mb-20{
  margin-bottom: 20px;
}
.card-features-and-offers p.mt-10{
  margin-top: 20px;
}
.card-features-and-offers p.mt-40{
  margin-top: 40px;
}
p.gray{
  color: #666666;
}
.connect-modal-form{
  margin-bottom: 0;
}
input.connect-form-input{
  width: 100%;
  box-sizing: border-box;
  min-height: 38px;
  font-size: 14px;
  font-weight: 400;
  color: #2d2d2d;
  box-sizing: border-box;
  padding: 10px 20px;
  height: 40px;
}
.add-on-offer-list-wrapper{
  padding: 0;
}
ul.add-on-offer-list{
  display: flex;
  flex-wrap: wrap;
  margin-top: 30px;
  padding: 0;
  margin: 30px -20px 0 -20px;
}
.add-on-offer-list li{
  list-style-type: none;
  width: 33.33%;
  margin-right: 16.66%;
  display: flex;
  align-items: flex-start;
  flex-direction: column;
  row-gap: 9px;
  margin-bottom: 20px;
  box-sizing: border-box;
  padding: 0 20px;
}
.add-on-offer-list li img{
  width: 50px;
}
.others-text,.textarea{
  min-height: 200px;
  width: 400px;
  margin: 30px 0;
  resize: none;
  border: 1px solid #dddddd;
  padding: 20px;
  font-size: 14px;
  font-weight: 400;
  max-width: 100%;
  -webkit-appearance: none;
}
input.connect-form-input::-webkit-input-placeholder,
textarea::-webkit-input-placeholder {
  font-size: 14px;
  font-weight: 400;
  letter-spacing: normal;
  color: #a8a8a8;
}
input.connect-form-input:-ms-input-placeholder,
textarea:-ms-input-placeholder {
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  letter-spacing: normal;
  color: #a8a8a8;
}
input.connect-form-input::placeholder,
textarea::placeholder {
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  letter-spacing: normal;
  color: #a8a8a8;
}
.custom-select-reusable.is70{
  width: 70%;
}
input[disabled].disabled-select{
  font-size: 13px;
  font-weight: 400;
  color: #a8a8a8;
  width: auto;
  min-width: 300px;
  box-sizing: border-box;
  padding: 10px 20px;
  height: 40px;
}
.horizontal-select{
  display: flex;
  align-items: center;
  justify-content: flex-start;
  margin-bottom: 20px;
}
.horizontal-select .select-selected{
  width: auto;
  min-width: 300px;
}
.horizontal-select label{
  font-size: 13px;
  color: #666;
  min-width: 140px;
  margin-right: 20px;
}
p.big-para{
  font-size: 18px;
}
.closure-reason{
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 13px;
  color: #666;
  width: 100%;
  margin-bottom: 20px;
}
.offer-card{
  display: block;
  margin: 30px 0px;
  width: 100%;
}
.offer-card .offer-image{
  position: relative;  
  max-width: 100%;
  width: 100%;
}
/* ... */

